--- a/index.html
+++ b/index.html
@@ -2,102 +2,53 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>🎮 Panel Claves</title>
+<title>🎮 Panel Productos</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{
-  margin:0;
-  background:#070b14;
-  color:#fff;
-  font-family:Arial,Helvetica,sans-serif;
-}
-.container{
-  max-width:600px;
-  margin:auto;
-  padding:20px;
-}
+body{margin:0;background:#070b14;color:#fff;font-family:Arial}
+.container{max-width:520px;margin:auto;padding:20px}
 h2{text-align:center;color:#00ffcc}
-
-input{
-  width:100%;
-  padding:12px;
-  margin-top:8px;
-  border:none;
-  border-radius:10px;
-  background:#121c33;
-  color:#fff;
-}
-button{
-  padding:12px;
-  border:none;
-  border-radius:10px;
-  font-weight:bold;
-  cursor:pointer;
-}
+input{width:100%;padding:12px;margin-top:8px;border:none;border-radius:10px;background:#121c33;color:#fff}
+button{width:100%;padding:14px;margin-top:10px;border:none;border-radius:12px;background:linear-gradient(135deg,#00ffcc,#0077ff);font-weight:bold}
 .hidden{display:none}
 
-/* BUSCADOR */
-.search{
-  background:#0b1220;
-  padding:12px;
-  border-radius:14px;
-  margin-bottom:16px;
-}
+.search{background:#0b1220;padding:12px;border-radius:14px;margin-bottom:14px}
 
-/* PRODUCTO */
-.producto{
+.item{
   background:#121c33;
-  padding:14px;
-  border-radius:14px;
-  margin-top:14px;
-  box-shadow:0 0 12px #000;
-}
-.producto small{color:#aaa}
-
-.actions{
-  display:flex;
-  gap:8px;
+  padding:12px;
+  border-radius:12px;
   margin-top:10px;
 }
-.actions button{
-  background:#00ffcc;
-  color:#000;
-}
-
-.logout{
-  width:100%;
-  margin-top:20px;
-  background:#ff4d4d;
-  color:#fff;
-}
+.actions{display:flex;gap:8px;margin-top:8px}
+.actions button{width:auto;padding:10px}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<!-- 🔐 LOGIN -->
+<!-- LOGIN -->
 <div id="loginBox">
   <h2>🔐 LOGIN ADMIN</h2>
-  <input id="email" placeholder="Correo admin">
+  <input id="email" placeholder="Correo">
   <input id="pass" type="password" placeholder="Contraseña">
   <button onclick="login()">ENTRAR</button>
 </div>
 
-<!-- 📦 PANEL -->
+<!-- PANEL -->
 <div id="panelBox" class="hidden">
-  <h2>📦 PANEL CLAVES</h2>
+  <h2>📦 PRODUCTOS / CLAVES</h2>
 
   <div class="search">
-    🔍
     <input id="buscar" placeholder="Buscar producto / ID" oninput="buscarProducto()">
   </div>
 
-  <div id="estado">Conectando a Firebase...</div>
+  <div id="estado">Cargando productos...</div>
   <div id="lista"></div>
 
-  <button class="logout" onclick="logout()">CERRAR SESIÓN</button>
+  <button onclick="logout()" style="background:#ff4d4d">CERRAR SESIÓN</button>
 </div>
 
 </div>
@@ -109,7 +60,6 @@ from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, collection, getDocs, doc, updateDoc, arrayUnion }
 from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-/* 🔥 FIREBASE */
 const firebaseConfig = {
   apiKey: "AIzaSyAKrBTAkJGhB9s3E3MExqzj8mtXgKYsWRc",
   authDomain: "davidstore-51f7f.firebaseapp.com",
@@ -118,83 +68,81 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
-const db   = getFirestore(app);
+const db = getFirestore(app);
 
 const loginBox = document.getElementById("loginBox");
 const panelBox = document.getElementById("panelBox");
 const lista = document.getElementById("lista");
 const estado = document.getElementById("estado");
 
-/* 🔐 AUTH */
+/* AUTH */
 onAuthStateChanged(auth,user=>{
   if(user){
     loginBox.classList.add("hidden");
     panelBox.classList.remove("hidden");
-    cargarClaves();
+    cargarProductos();
   }else{
     loginBox.classList.remove("hidden");
     panelBox.classList.add("hidden");
   }
 });
 
-/* LOGIN */
 window.login = ()=>{
   signInWithEmailAndPassword(auth,email.value,pass.value)
     .catch(e=>alert(e.message));
 };
 
-/* LOGOUT */
 window.logout = ()=>signOut(auth);
 
-/* 🔑 CARGAR CLAVES */
-async function cargarClaves(){
+/* CARGAR PRODUCTOS */
+async function cargarProductos(){
   lista.innerHTML="";
-  estado.textContent = "Cargando productos...";
+  estado.textContent="Cargando productos...";
+
   const snap = await getDocs(collection(db,"claves"));
 
-  estado.textContent = `🎮 Productos: ${snap.size}`;
+  estado.textContent = `Productos: ${snap.size}`;
 
   snap.forEach(d=>{
     const p = d.data();
-    const totalKeys = Array.isArray(p.keys) ? p.keys.length : 0;
+    const total = Array.isArray(p.keys) ? p.keys.length : 0;
 
     lista.innerHTML += `
-      <div class="producto">
+      <div class="item">
         🎮 <b>${p.nombre ?? "SIN NOMBRE"}</b><br>
         💰 Precio: ${p.precio ?? 0}<br>
-        ⏳ Duración: ${p.duracion ?? "-"}<br>
-        🔑 Keys: ${totalKeys}<br>
-        <small>ID: ${d.id}</small>
+        🔑 Keys: ${total}<br>
+        🆔 ${d.id}
 
         <div class="actions">
           <input id="k_${d.id}" placeholder="Nueva key">
-          <button onclick="agregarKey('${d.id}')">AGREGAR</button>
+          <button onclick="addKey('${d.id}')">AGREGAR</button>
         </div>
       </div>
     `;
   });
 }
 
-/* 🔍 BUSCAR */
+/* BUSCAR */
 window.buscarProducto = ()=>{
   const t = buscar.value.toLowerCase();
-  document.querySelectorAll(".producto").forEach(p=>{
-    p.style.display = p.innerText.toLowerCase().includes(t) ? "block" : "none";
+  document.querySelectorAll(".item").forEach(i=>{
+    i.style.display = i.innerText.toLowerCase().includes(t) ? "block":"none";
   });
 };
 
-/* ➕ AGREGAR KEY */
-window.agregarKey = async (id)=>{
+/* AGREGAR KEY */
+window.addKey = async (id)=>{
   const inp = document.getElementById("k_"+id);
   const key = inp.value.trim();
-  if(!key) return alert("❌ Key vacía");
+  if(!key) return alert("Key vacía");
 
   await updateDoc(doc(db,"claves",id),{
     keys: arrayUnion(key)
   });
 
   inp.value="";
-  cargarClaves();
+  cargarProductos();
 };
 </script>
 
